# internal/model/transaction.go
@@ -1,0 +1,26 @@
+package model
+
+type Transaction struct {
+	ID          int                 `json:"id"`
+	TotalAmount int                 `json:"total_amount"`
+	CreatedAt   string              `json:"created_at"`
+	Details     []TransactionDetail `json:"details"`
+}
+
+type TransactionDetail struct {
+	ID            int    `json:"id"`
+	TransactionID int    `json:"transaction_id"`
+	ProductID     int    `json:"product_id"`
+	ProductName   string `json:"product_name,omitempty"`
+	Quantity      int    `json:"quantity"`
+	Subtotal      int    `json:"subtotal"`
+}
+
+type CheckoutItem struct {
+	ProductID int `json:"product_id"`
+	Quantity  int `json:"quantity"`
+}
+
+type CheckoutRequest struct {
+	Items []CheckoutItem `json:"items"`
+}
